--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server .",
-    "build": "Webpack .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "build": "webpack --mode production",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --mode development --hot"
   },
   "author": "Panks_28",
   "license": "ISC",
@@ -19,12 +20,14 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "^7.23.6",
     "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.6.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
     "path": "^0.12.7",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
